# hfit

./: .gitignore  LICENSE  README.md  hfit_script.py  pyproject.toml
hfit/: __init__.py  cli.py  config.py  core.py  html_processor.py  translation_services.py
test/: example.html
